# ganet-project-bwc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  Quant_Portfolio_Monitor_Plan.md  README.md  Setup-QuantEnv.ps1  build.py  build2.py  build3.py  build_fix.py  build_fix_2.py  build_fix_3.py  build_main.py  build_spider.py  doppler.yaml  index.html  netlify.toml  pyproject.toml  results.html  ruff.toml  scrapycloud.yml  task_phases_6_10.md  vercel.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
charts/: attribution.html  backtest-compare.html  correlation-graph.html  drawdown.html  equity-curve.html  factor-loadings.html  heatmap.html  monte-carlo.html  return-dist.html  rolling-metrics.html
data/: behavioural-audit.json  results.json
docs/: 404.html  architecture.md  archive-phase.md  backtest-results.json  backtest-results.md  combined_scenes.py  dashboard.html  design.md  development.md  index.html  index.md  interactive-dashboard.md  mermaid_diagrams.md  mkdocs.yml  performance.md  phase-0-scaffold.md  phase-11-15-pm-track.md  phase-11-21-implementation-track.md  phase-22-onwards-advanced-analytics.md  phase-finale-endgame.md  plotly_animations.py  progress-report.md  project_scenes.py  roadmap.md  scenes.py  scenes_final.py  scenes_v2.py  signals-history.md  sitemap.xml
docs/archive/: Quant_Portfolio_Monitor_Plan.md  tail.txt  test_results.txt
docs/backtest-results/: index.html
docs/design/: index.html
docs/interactive-dashboard/: index.html
docs/performance/: index.html
docs/phase-0-scaffold/: index.html
docs/phase-11-21-implementation-track/: index.html
docs/phase-22-onwards-advanced-analytics/: index.html
docs/phase-finale-endgame/: index.html
docs/progress-report/: index.html
docs/roadmap/: index.html
docs/search/: search_index.json
docs/signals-history/: index.html
docs/tasks/: task.md  task_10_6.txt  task_phases_6_10.md
docs/tasks/task_phases_6_10/: index.html
docs/viz_output/: 03_var_cvar_sweep.html  04_vol_surface_3d.html  06_black_litterman.html  07_hrp_correlation.html  09_fama_french.html  10_dynamic_allocation.html  11_stress_testing.html  12_kelly_criterion.html  13_yield_curve.html  16_correlation_stress.html
frontend/: index.html  journal.html  research.html
frontend/docs/: backtest-results.json  scenes.py  sitemap.xml
frontend/docs/architecture/: index.html
frontend/docs/archive-phase/: index.html
frontend/docs/archive/Quant_Portfolio_Monitor_Plan/: index.html
frontend/docs/development/: index.html
frontend/docs/mermaid_diagrams/: index.html
frontend/docs/phase-22-onwards-advanced-analytics/: index.html
frontend/docs/tasks/task/: index.html
frontend/docs/viz_output/: 02_efficient_frontier.html  05_regime_detection.html  08_backtest_equity.html  14_quadratic_variation.html  17_jump_diffusion.html  18_risk_dashboard.html
frontend/js/: main.js
frontend/styles/: layout.css  pages.css  tokens.css
media/Tex/: ab59f0ba4d80d308.tex  b175e66cbf204af4.tex  c726bbf0334a1a39.tex
media/manim-skills/: code-to-manim-explainer.md  manim-best-practices.md
media/videos/combined_scenes/1080p60/partial_movie_files/Vis_TheStochasticVoid/: partial_movie_file_list.txt
media/videos/combined_scenes/1440p60/partial_movie_files/Vis_InvariantBalancing/: partial_movie_file_list.txt
media/videos/combined_scenes/1440p60/partial_movie_files/Vis_RegimePhaseShift/: partial_movie_file_list.txt
media/videos/combined_scenes/1440p60/partial_movie_files/Vis_StructuralDataFlow/: partial_movie_file_list.txt
media/videos/combined_scenes/1440p60/partial_movie_files/Vis_TheOptimalEdge/: partial_movie_file_list.txt
media/videos/combined_scenes/1440p60/partial_movie_files/Vis_TheStochasticVoid/: partial_movie_file_list.txt
quant_monitor/: __init__.py  bootstrap.py  cli.py  config.py  config.toml  main.py
quant_monitor/agent/: __init__.py  alerts.py  alerts.py.tmp  fusion.py  optimizer.py  risk_manager.py  signal_engine.py
quant_monitor/backtest/: __init__.py  allocation.py  attribution.py  behavioural.py  engine.py  metrics.py  modern_metrics.py  simulation.py  stress.py  topological_run.py
quant_monitor/dashboard/: app.py  data_loader.py  openbb_views.py
quant_monitor/data/: __init__.py  appwrite_client.py  cache.py  duckdb_sync.py  pipeline.py  portfolio_history.py  rate_limiter.py
quant_monitor/data/sources/: __init__.py  alpaca_feed.py  fred_feed.py  massive_feed.py  news_feed.py  sec_feed.py  yfinance_feed.py
quant_monitor/features/: moving_averages.py  sentiment_features.py  volatility.py
quant_monitor/models/: __init__.py  factor.py  fundamental.py  macro.py  schemas.py  sentiment.py  technical.py
quant_monitor/models/math/: correlation_graph.py  drift_predictor.py  hrp_sizer.py  mst_pruner.py
quant_monitor/spiders/: __init__.py  google_rss_spider.py  items.py  pipelines.py  scrapy_settings.py  sec_edgar_spider.py  yfinance_spider.py
scripts/: _probe_finbert.py  build_frontend_assets.py  epic_render.py  export_for_archive.py  generate_plotly_dashboard.py  generate_tearsheet.py  render_4k.py  render_manim.py  setup_appwrite.py  test_integrations.py
scripts/archive/: build.py  build2.py  build3.py  build_fix.py  build_fix_2.py  build_main.py  build_spider.py
styles/: motion.css
tests/: __init__.py  conftest.py  test_agent.py  test_alerts.py  test_allocation.py  test_backtest.py  test_behavioural.py  test_config.py  test_dashboard.py  test_features.py  test_fundamental.py  test_fusion.py  test_institutional_stress.py  test_integration_e2e.py  test_integration_models.py  test_metrics.py  test_metrics_attribution.py  test_modern_metrics.py  test_pipeline_cache.py  test_portfolio_history.py  test_sentiment.py  test_signal_engine.py  test_simulation.py  test_spiders.py  test_stress.py
tests/test_data/: TransactionHistory_2026-03-13.csv  test_pipeline.py
tests/test_features/: test_moving_averages.py
tests/test_models/: __init__.py  test_factor.py  test_macro.py  test_technical.py
(+16 files in other folders)
