[project]
name = "quant-monitor"
version = "0.1.0"
description = "Quant Portfolio Monitoring System — autonomous signal generation, risk monitoring, and rebalancing recommendations"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Data sources
    "alpaca-py>=0.30.0",
    "requests>=2.31.0",
    "feedparser>=6.0.0",
    # Database & caching
    "duckdb>=1.0.0",
    "diskcache>=5.6.0",
    # NLP / ML (torch is a transitive dep of transformers — not listed directly)
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    # Portfolio optimization
    "pyportfolioopt>=1.5.0",
    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Dashboard
    "streamlit>=1.32.0",
    # Alerts
    "python-telegram-bot>=21.0",
    # Appwrite backend
    "appwrite>=6.0.0",
    # Scrapy (spiders for Zyte Cloud)
    "scrapy>=2.11.0",
    # Plotting (static charts for GitHub Pages archive)
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
quant-monitor = "quant_monitor.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "mkdocs-material>=9.5.0",
    "yfinance>=0.2.36",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

# Point uv cache to D: drive to avoid cross-drive copies and reuse existing downloads
[tool.uv]
cache-dir = "D:\\KJ\\.uv-cache"
