[project]
name = "project-bwc"
version = "0.1.0"
description = "Ganet - Project BWC (Brownies with White Chocolate) — autonomous signal generation, risk monitoring, and rebalancing recommendations"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Visuals
    "asciichartpy>=1.5.0",
    # Data sources
    "alpaca-py>=0.30.0",
    "requests>=2.31.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    # Database & caching
    "diskcache>=5.6.0",
    # Portfolio optimization
    "pyportfolioopt>=1.5.0",
    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Data feeds
    "yfinance>=0.2.36",
    # Dashboard (CLI)
    "rich>=13.0.0",
    "openbb>=4.3.0",
    # Alerts
    "python-telegram-bot>=21.0",
    # Appwrite backend
    "appwrite>=6.0.0",
    # Scrapy (spiders for Zyte Cloud)
    "scrapy>=2.11.0",
    # Plotting (static charts for GitHub Pages archive)
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "torch>=2.10.0",
    "polygon-api-client>=1.16.3",
    "cvxpy>=1.8.1",
    "scikit-learn>=1.8.0",
    "cvxopt>=1.3.3",
    "networkx>=3.6.1",
    "manim>=0.20.1",
    "duckdb>=1.5.0",
    "typer>=0.24.1",
    "polars>=1.39.0",
    "pandas-market-calendars>=5.3.1.2",
    "pyarrow>=23.0.1",
    "streamlit>=1.55.0",
    "streamlit-echarts>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
project = "quant_monitor.cli:app"
project-dashboard = "quant_monitor.dashboard.app:main"
project-bootstrap = "quant_monitor.bootstrap:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "mkdocs-material>=9.5.0",
    "pytest-asyncio>=1.3.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

# Point uv cache to D: drive to avoid cross-drive copies and reuse existing downloads
[tool.uv]
cache-dir = "D:\\KJ\\.uv-cache"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require network access and Doppler secrets",
]

[tool.hatch.build.targets.wheel]
packages = ["quant_monitor"]
